# independblock

./: .gitignore  CMakeLists.txt  README.md  setup.bat
src/: cube.c  cube.h  independblock.h  input.c  input.h  main.c
